@@ -112,7 +112,7 @@ END dropBall ;
 VAR
    light, dark: Colour ;
 BEGIN
-   popWorld.init(FALSE) ;
+   popWorld.init(TRUE) ;
    light := defineColour(initFract(0, 166, 256),
                          initFract(0, 124, 256),
                          initFract(0, 54, 256)) ;
@@ -121,11 +121,16 @@ BEGIN
                         zero()) ;
 
    placeBoundary ;
+(*
    fireBox(green()) ;
-   (* twoDsim.gravity(-9.81) ; *)
+*)
+   twoDsim.gravity(-9.81) ;
+   dropBall(yellow()) ;
+
+   twoDsim.dumpWorld ;
 (*
    twoDsim.simulateFor(1.0) ;
-   dropBall(yellow()) ;
+
    twoDsim.simulateFor(1.0) ;
    dropBall(red()) ;
 
