@@ -31,6 +31,8 @@ FROM macroObjects IMPORT Macro, circle, moveTo, up, down, left, right, rotate,
                          triangle, angledRect ;
 
 
+CONST
+   useGroff = TRUE ;
 
 
 (*
@@ -112,7 +114,7 @@ END dropBall ;
 VAR
    light, dark: Colour ;
 BEGIN
-   popWorld.init(FALSE) ;
+   popWorld.init(useGroff) ;
    light := defineColour(initFract(0, 166, 256),
                          initFract(0, 124, 256),
                          initFract(0, 54, 256)) ;
