@@ -23,6 +23,8 @@ extern "C" void empty_buffer (void);
 extern "C" void batch (void);
 extern "C" void use_buffer (void);
 extern "C" void use_time_delay (unsigned int on) ;
+extern "C" void draw_collision (unsigned int actual, unsigned int predict);
+extern "C" void dump_world (void);
 extern "C" unsigned int rm (unsigned int id);
 extern "C" double get_time (void);
 extern "C" double time_until (void);
@@ -54,6 +56,8 @@ extern "C" void empty_buffer (void);
 extern "C" void batch (void);
 extern "C" void use_buffer (void);
 extern "C" void use_time_delay (unsigned int on) ;
+extern "C" void draw_collision (unsigned int actual, unsigned int predict);
+extern "C" void dump_world (void);
 extern "C" unsigned int rm (unsigned int id);
 extern "C" double get_time (void);
 extern "C" double time_until (void);
